# intro-to-python

./: .pre-commit-config.yaml  README.md  basics.ipynb  interactive.ipynb  main.py  packages.ipynb  pyproject.toml  requirements.txt
content/: 1_Using Packages.md
markdown/: Python Basics.md  Using Packages.md
notebooks/: python_basics.ipynb  using_packages.ipynb
scripts/: notebooks_to_markdown.py
