[project]
name = "intro-to-python"
version = "0.1.0"
description = "Intro to Python Workshop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "seaborn>=0.13.2",
]
